{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 199,
  "lineage": "a6f00282-85a0-ce73-7d62-19f082a6c427",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "my-private-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20231010",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/itisv-401212/zones/us-east1-b/disks/my-private-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/itisv-401212/zones/us-east1-b/instances/my-private-instance",
            "instance_id": "7154176106686124581",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "it9O848CkWA=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "my-private-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc",
                "network_ip": "10.10.20.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/itisv-401212/regions/us-east1/subnetworks/project-private-subnetwork",
                "subnetwork_project": "itisv-401212"
              }
            ],
            "project": "itisv-401212",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/zones/us-east1-b/instances/my-private-instance",
            "service_account": [
              {
                "email": "scv-private-vm@itisv-401212.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private-subnet"
            ],
            "tags_fingerprint": "zIQF87C8VRg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.iam.google_service_account.sa",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-18T21:12:44.896-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/itisv-401212/global/firewalls/allow-iap",
            "log_config": [],
            "name": "allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc",
            "priority": 1000,
            "project": "itisv-401212",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/firewalls/allow-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private-subnet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2023-10-18T21:12:44.904-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/itisv-401212/global/firewalls/deny-all-ingress",
            "log_config": [],
            "name": "deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc",
            "priority": 1002,
            "project": "itisv-401212",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/firewalls/deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private-subnet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/itisv-401212/global/networks/project-vpc",
            "mtu": 0,
            "name": "project-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "itisv-401212",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-18T21:12:58.665-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/itisv-401212/regions/us-east1/routers/project-private-router",
            "name": "project-private-router",
            "network": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc",
            "project": "itisv-401212",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/regions/us-east1/routers/project-private-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "itisv-401212/us-east1/project-private-router/project-private-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "project-private-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "itisv-401212",
            "region": "us-east1",
            "router": "project-private-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "project-private-subnetwork",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.nat-router",
            "module.network.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-18T21:12:45.362-07:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/itisv-401212/regions/us-east1/subnetworks/project-private-subnetwork",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "project-private-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "itisv-401212",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/regions/us-east1/subnetworks/project-private-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-18T21:12:45.559-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/itisv-401212/regions/us-central1/subnetworks/project-public-subnetwork",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "project-public-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/itisv-401212/global/networks/project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "itisv-401212",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itisv-401212/regions/us-central1/subnetworks/project-public-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}